--- a/Puzzle.html
+++ b/Puzzle.html
@@ -80,21 +80,7 @@
                 }
             }
 
-            // Check collision with obstacles or enemies (sample code)
-            // Replace this code with your own logic for obstacles/enemies
-            var obstacle = { x: 300, y: 250, width: 30, height: 30, color: "red" };
-            if (
-                player.x < obstacle.x + obstacle.width &&
-                player.x + player.width > obstacle.x &&
-                player.y < obstacle.y + obstacle.height &&
-                player.y + player.height > obstacle.y
-            ) {
-                // Collision detected with obstacle
-                console.log("Collision with obstacle!");
-            }
-
-            // Check if player reaches the end goal (sample code)
-            // Replace this code with your own logic for end goal
+            // Check if player reaches the end goal
             var endGoal = { x: 700, y: 150, width: 50, height: 50, color: "green" };
             if (
                 player.x < endGoal.x + endGoal.width &&
@@ -104,6 +90,7 @@
             ) {
                 // Player reached the end goal
                 console.log("Player reached the end goal!");
+                // Add your code here to handle winning the game
             }
         }
 
@@ -127,14 +114,12 @@
             context.fillStyle = obstacle.color;
             context.fillRect(obstacle.x, obstacle.y, obstacle.width, obstacle.height);
 
-            // Draw end goal (sample code)
-            // Replace this code with your own logic for end goal
+            // Draw end goal
             var endGoal = { x: 700, y: 150, width: 50, height: 50, color: "green" };
             context.fillStyle = endGoal.color;
             context.fillRect(endGoal.x, endGoal.y, endGoal.width, endGoal.height);
         }
 
-        // Keyboard event listeners
         window.addEventListener("keydown", function(event) {
             keys[event.key] = true;
         });
@@ -143,7 +128,6 @@
             keys[event.key] = false;
         });
 
-        // Start the game
         gameLoop();
     </script>
 </body>
